# Heterogeneous-Computing

HC02/: CODE_EXPLAINED.md  HC02_SPEC.md
HC02/blatt02/: README.md  REPORT.md  SLIDES.md
HC02/blatt02/colab/: run_colab.ipynb
HC02/blatt02/scripts/: run_all.sh
HC02/blatt02/src/: task1_divergence.cu
HC02/presentation/: HC02_slides.html
jdeffner-HC02/: CODE_EXPLAINED.html  HC02_FROM_ZERO.html  HC02_SPEC.html
jdeffner-HC02/blatt02/: CMakeLists.txt  REPORT.md  SLIDES.md
jdeffner-HC02/blatt02/colab/: run_colab.ipynb
jdeffner-HC02/blatt02/results/: task1_divergence.csv  task1_scaling.csv  task2_occupancy.csv  task2_patterns.csv
jdeffner-HC02/blatt02/scripts/: plot.py
jdeffner-HC02/blatt02/src/: common.cuh  cpu_baseline.cpp  task1_divergence.cu  task2_bandwidth.cu
jdeffner-HC02/presentation/: HC02_full_story.html  HC02_slides.html
smart-home-jd/: README.md  RESULT_OVERVIEW.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
smart-home-jd-lean/: .gitignore  CODE_GUIDE.md  README.md  RESULT_OVERVIEW.md
smart-home-jd-lean/.claude/: launch.json
smart-home-jd-lean/firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
smart-home-jd-lean/firmware/host-test/: build.sh  test_sensors.c
smart-home-jd-lean/firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  device_runtime.c  device_runtime.h  identity.c  identity.h  net.c  net.h  provisioning.c  provisioning.h
smart-home-jd-lean/firmware/main/sensors/: catalog.c  catalog.h  sensor.c  sensor.h
smart-home-jd-lean/hub/: Cargo.toml  README.md
smart-home-jd-lean/hub/crates/ctl/: Cargo.toml
smart-home-jd-lean/hub/crates/ctl/src/: main.rs
smart-home-jd-lean/hub/crates/dashboard/: Cargo.toml
smart-home-jd-lean/hub/crates/dashboard/src/: main.rs
smart-home-jd-lean/hub/crates/dashboard/static/: index.html
smart-home-jd-lean/hub/crates/hub/: Cargo.toml
smart-home-jd-lean/hub/crates/hub/src/: alarms.rs  catalog.rs  config.rs  main.rs  mqtt.rs  registry.rs  rules.rs
smart-home-jd-lean/hub/crates/shared/: Cargo.toml
smart-home-jd-lean/hub/crates/shared/src/: lib.rs  topics.rs  types.rs  util.rs
smart-home-jd-lean/hub/crates/sim/: Cargo.toml
smart-home-jd-lean/hub/crates/sim/src/: main.rs
smart-home-jd-lean/mosquitto/: mosquitto.conf
smart-home-jd-lean/slides/: praesentation.tex
smart-home-jd/data/: devices.json  rooms.json
smart-home-jd/scripts/: clear-devices.ts  seed.ts  smoke-test.ts  wake-offline.ts
smart-home-jd/src/hub/: alarms.ts  config.ts  index.ts  registry.ts  rules.ts
smart-home-jd/src/sensors/: base-sensor.ts  bed.ts  console.ts  device-catalog.ts  door.ts  factory.ts  hub-client.ts  motion.ts  run.ts  sos.ts  stove.ts
smart-home-jd/src/shared/: mqtt.ts  topics.ts  types.ts
smart-home-jd/src/web/: server.ts
smart-home-jd/src/web/public/: index.html
