# Rust workspace for the Assisted-Living smart-home backend.
# Produces self-contained binaries (no Docker, no runtime): `hub`, `dashboard`,
# `ctl`. Cross-compile to a Raspberry Pi with e.g.
#   cargo build --release --target aarch64-unknown-linux-gnu
[workspace]
resolver = "2"
members = ["crates/shared", "crates/hub", "crates/dashboard", "crates/ctl", "crates/sim"]

[workspace.package]
edition = "2021"
version = "1.0.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rumqttc = "0.24"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.8"
axum = "0.7"
shared = { path = "crates/shared" }

# Smaller, faster release binaries.
[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
