[package]
name = "hub"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
shared.workspace = true
serde.workspace = true
serde_json.workspace = true
rumqttc.workspace = true
tokio.workspace = true
chrono = { workspace = true, features = ["clock"] }
rand.workspace = true
