[package]
name = "sim"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "sim"
path = "src/main.rs"

[dependencies]
shared.workspace = true
serde.workspace = true
serde_json.workspace = true
rumqttc.workspace = true
tokio.workspace = true
rand.workspace = true
